@@ -1,9 +1,7 @@
 # What The Flip
 
 A group project for my Java 2 class, built using JavaFX.  
-This is a memory card matching game — flip two cards to find a pair.
-
-> ⚠️ This is an incomplete project.
+This is a memory card matching game, flip two cards to find a pair.
 
 ## Features
 - JavaFX UI with card flipping
@@ -13,13 +11,26 @@ This is a memory card matching game — flip two cards to find a pair.
 ## How to Run
 1. Open in an IDE of your choice (ideally IntelliJ)
 2. Make sure JavaFX is set up with VM options:
-3. Run `Main.java`
+--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
 
-## Tech
-- Java
-- JavaFX
-- Java I/O
+## Resources - Music + Sound Effects
+- Music by DELOSound from Pixabay - https://pixabay.com/music/beats-lofi-background-music-337568/ (intro screen music)
 
-## Author(s)
-Franky Ventura + Sean Manser  
-St. Clair College — Java Programming 2
+- Music by music_for_video from Pixabay - https://pixabay.com/music/elevator-music-elevator-music-bossa-nova-background-music-version-60s-10900/ (in-game music)
+
+- Sound Effect by freesound_community from Pixabay - https://pixabay.com/sound-effects/negative-beeps-6008/ (incorrect guess)
+
+- Sound Effect by u_8g40a9z0la from Pixabay - https://pixabay.com/sound-effects/tada-234709/ (match all cards)
+
+- Sound Effect by floraphonic from Pixabay - https://pixabay.com/sound-effects/cute-level-up-3-189853/ (play button)
+
+- Sound Effect by CreatorsHome from Pixabay - https://pixabay.com/sound-effects/select-003-337609/ (opening a menu)
+
+- Sound Effect by LIECIO from Pixabay - https://pixabay.com/sound-effects/message-alert-190042/ (matching 2 cards)
+
+## Resources - Images
+- Images for Fruit and Fish themes from bluecarrot16 on OpenGameArt.org - https://opengameart.org/content/lpc-food
+
+## Resources - Fonts
+- DynaPuff - Designed by Toshi Omagari, Jennifer Daniel - https://fonts.google.com/specimen/DynaPuff
+- Raleway - Designed by Matt McInerney, Pablo Impallari, Rodrigo Fuenzalida
